# Robotics

./: README.md
ProjectModules/ConveyorPLC/: CMakeLists.txt
ProjectModules/ConveyorPLC/include/: Conveyor.h  ConveyorModule.h
ProjectModules/ConveyorPLC/server/: demo.bashrc  modbus_server.bashrc
ProjectModules/ConveyorPLC/src/: Conveyor.cpp  ConveyorModule.cpp  ConveyorModuleFunctions.cpp
ProjectModules/ConveyorPLCEmulator/: CMakeLists.txt
ProjectModules/ConveyorPLCEmulator/src/: CPLC_EMU_Main.cpp  CPLC_GUI.cpp  CPLC_GUI.h
ProjectModules/RealTimeDecisionModule/: CMakeLists.txt
ProjectModules/RealTimeDecisionModule/include/: RealTimeDecisionModule.h
ProjectModules/RealTimeDecisionModule/src/: RealTimeDecisionModule.cpp  SequenceFlows.cpp
match_engine/: CMakeLists.txt  Dockerfile  README.md  run.sh  test.sh
match_engine/ExternalLibs/gTest/: CMakeCache.txt  Makefile  cmake_install.cmake
match_engine/include/: matchEngine.h  test.h
match_engine/src/: main.cpp  matchEngine.cpp
match_engine/test/: test.cpp
match_engine/testFiles/: output.txt  unmatched.txt
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/cfg/: algorithmParameters.cfg
my_pcl_tutorial/include/my_pcl_tutorial/: Color.hpp  Colour_map.hpp  PclImage.hpp  example.hpp  laser_cloud.hpp  planeFitter.hpp
my_pcl_tutorial/rviz/: Velodyne.rviz  laser.rviz
my_pcl_tutorial/src/: Color.cpp  Colour_map.cpp  PclImage.cpp  example.cpp  ground_segment.cpp  laser_cloud.cpp  planeFitter.cpp  tf.cpp
rack_detection/: CMakeLists.txt  package.xml
rack_detection/include/rack_detection/: newTutorial.hpp
rack_detection/launch/: rack_detection.launch
rack_detection/rviz/: laser.rviz
rack_detection/src/: newTutorial.cpp
